added new-tweet.css for styling for new tweet containers

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,6 @@
+/* for new tweet container box */
+
+/* text area */
 #tweet-text {
   border: none;
   border-bottom: 5px solid black;
@@ -33,3 +36,4 @@
 .red {
   color: red;
 }
+
