--- a/public/styles/old-tweet.css
+++ b/public/styles/old-tweet.css
@@ -1,22 +1,6 @@
-/* styling for each old tweet */
-.tweet-header {
-  background-color: transparent;
-  background-image: none;
-  display: flex;
-  justify-content: space-between;
-  height: 5%;
-  margin: 20px 0px 0px 0px;
-  font-weight: bold;
-}
-.tweet-footer {
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-  font-size: 15px;
-  margin: 10px;
-}
+/* styling for each old tweets */
 
-/* other tweets */
+/* general styling */
 .old-tweet {
   border: 5px solid black;
   margin: 50px 0px;
@@ -32,24 +16,41 @@
   color : lightsteelblue;
 }
 
+/* header */
+.tweet-header {
+  background-color: transparent;
+  background-image: none;
+  display: flex;
+  justify-content: space-between;
+  height: 5%;
+  margin: 0px;
+  font-weight: bold;
+}
 .img-name {
-  /* justify-content: flex-end; */
   height: 64px;
   width: 200px;
   display: flex;
   align-items: center;
 }
-
-.border-bottom {
-  border-bottom: 5px solid black;
-}
-
-
-
 .tweeter-id {
   color: #f4f1ec;
   text-shadow: none;
   padding: 0px 0px 5px 0px;
   display: flex;
   align-items: center;
+}
+
+/* footer */
+.tweet-footer {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 15px;
+  margin: 10px;
+}
+
+
+
+.border-bottom {
+  border-bottom: 5px solid black;
 }
