--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,6 +1,10 @@
 /* for new tweet container box */
 
 /* text area */
+
+.new-tweet {
+  display:none;
+}
 .new-tweet #tweet-text {
   border: none;
   border-bottom: 5px solid black;
@@ -25,6 +29,13 @@
   color: #FFFFFF;
   font-family: Bungee;
   padding: 5px 10px;
+}
+.new-tweet button:hover {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
 }
 .new-tweet .counter {
   font-family: Bungee;
