--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -31,6 +31,7 @@
   color: #FFFFFF;
   font-family: Bungee;
   padding: 5px 10px;
+  cursor: pointer;
 }
 .new-tweet button:hover {
   /* Start the shake animation and make the animation last for 0.5 seconds */
@@ -55,6 +56,7 @@
   margin: 50px 0px;
   text-shadow: 0 0 2px #000;
   padding: 10px;
+  word-wrap: break-word;
 }
 .tweet:hover {
   text-shadow: none;
@@ -94,4 +96,33 @@
   font-weight: bold;
   font-size: 15px;
   margin: 10px;
+  width: 100%;
+}
+
+
+/* responsive */
+
+/* for desktop */
+
+@media only screen and (min-width: 1024px) {
+  .header {
+    width: 25%;
+    float: left;
+    margin-top: 170px;
+  }
+  main {
+    width: 60%;
+    margin-top: 120px;
+    float: right;
+  }
+  /* body {
+    display: flex;
+  } */
+  footer {
+    clear: both;
+  }
+  body {
+    max-width: 1024px;
+    margin: 0 auto;
+  }
 }
