--- a/public/styles/scss/tweets.scss
+++ b/public/styles/scss/tweets.scss
@@ -14,9 +14,11 @@
     width: 100%;
     background-color: transparent;
     margin: 10px 0px;
-  }
-  #tweet-text:focus {
-    outline: none;
+    resize: none;
+    
+    &:focus {
+      outline: none;
+    }
   }
   #tweet-button-area {
     display: flex;
@@ -32,13 +34,14 @@
     font-family: Bungee;
     padding: 5px 10px;
     cursor: pointer;
-  }
-  button:hover {
-    /* Start the shake animation and make the animation last for 0.5 seconds */
-    animation: shake 0.5s;
-  
-    /* When the animation is finished, start again */
-    animation-iteration-count: infinite;
+    
+    &:hover {
+      /* Start the shake animation and make the animation last for 0.5 seconds */
+      animation: shake 0.5s;
+    
+      /* When the animation is finished, start again */
+      animation-iteration-count: infinite;
+    }
   }
   .counter {
     font-family: Bungee;
@@ -59,11 +62,11 @@
   padding: 10px;
   word-wrap: break-word;
   
-  :hover {
+  &:hover {
     text-shadow: none;
     box-shadow: 10px 10px lightsteelblue;  
   }
-  :hover .right {
+  &:hover .right {
     color : lightsteelblue;
   }
 
@@ -104,7 +107,6 @@
 /* responsive */
 
 /* for desktop */
-
 @media only screen and (min-width: 1024px) {
   .header {
     width: 25%;
